Add some basic background and text coloring

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta name="author" content="Ankit Bhatia">
     <title>Meeting Minutes</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>
 <header>
     <h1>
         Meeting Minutes
@@ -21,30 +23,30 @@
     <table>
         <tr>
             <th><u>Date/Time</u></th>
-            <th> | </th>
+            <th> |</th>
             <th><u>Attendees</u></th>
-            <th> | </th>
+            <th> |</th>
             <th><u>Topics</u></th>
         </tr>
         <tr>
             <td>April 12th</td>
-            <td> | </td>
+            <td> |</td>
             <td>Ankit Bhatia</td>
-            <td> | </td>
+            <td> |</td>
             <td>How to Center a Div</td>
         </tr>
         <tr>
             <td>3:30PM PST</td>
-            <td> | </td>
+            <td> |</td>
             <td>John Cena</td>
-            <td> | </td>
+            <td> |</td>
             <td>Why use Rust?</td>
         </tr>
         <tr>
             <td></td>
-            <td> | </td>
+            <td> |</td>
             <td>Marilyn Monroe</td>
-            <td> | </td>
+            <td> |</td>
             <td>Connecting to UCSD WiFi</td>
         </tr>
     </table>
@@ -59,11 +61,12 @@
 
                 Setting the width of the element will prevent it from stretching out to the edges of its container.<br>
 
-                The element will then take up the specified width, and the remaining space will be split equally between the two margins.</p>
+                The element will then take up the specified width, and the remaining space will be split equally between
+                the two margins.</p>
         </section>
         <hr>
         <section>
-            <h2>Why use <span style="color:maroon">Rust?</span>    </h2>
+            <h2>Why use <span style="color:maroon">Rust?</span></h2>
             <img src="images/rust.png" alt="Why use Rust?" width="1168" height="295">
             <details>
                 <summary>Uses of Rust</summary>
@@ -162,4 +165,5 @@
         <button type="button" onclick="alert('Your submission has been received. Thank you!')">Submit</button>
     </fieldset>
 </form>
+</body>
 </html>
